// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csf-story-kind No default export 1`] = `
Object {
  "components": Object {},
  "kinds": Object {},
  "stories": Object {
    "myStory": Object {
      "arguments": Array [],
      "loc": Object {
        "end": Object {
          "column": 31,
          "line": 1,
        },
        "start": Object {
          "column": 23,
          "line": 1,
        },
      },
      "name": "myStory",
      "source": "() => {}",
    },
  },
}
`;

exports[`csf-story-kind default export - no title 1`] = `
Object {
  "components": Object {},
  "kinds": Object {},
  "stories": Object {},
}
`;

exports[`csf-story-kind default export - with title 1`] = `
Object {
  "components": Object {},
  "kinds": Object {
    "Storybook/Blocks/ControlsTable": Object {
      "attributes": Object {
        "title": "Storybook/Blocks/ControlsTable",
      },
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/csf-story-kind.test.ts",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "source": "
        export default {
          title: 'Storybook/Blocks/ControlsTable',
        };
      ",
      "title": "Storybook/Blocks/ControlsTable",
    },
  },
  "stories": Object {},
}
`;

exports[`csf-story-kind default export - with title and controls 1`] = `
Object {
  "components": Object {},
  "kinds": Object {
    "Storybook/Kind": Object {
      "attributes": Object {
        "component": "ControlsTable",
        "parameters": Object {
          "controls": Object {
            "name": Object {
              "label": "Name",
              "order": 9999,
              "type": "ControlTypes.TEXT",
              "value": "Mark",
            },
          },
        },
        "title": "Storybook/Kind",
      },
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/csf-story-kind.test.ts",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "source": "
      export default {
        title: 'Storybook/Kind',
        component: ControlsTable,
        parameters: {
          controls: {
            name: {
              type: ControlTypes.TEXT,
              label: 'Name',
              value: 'Mark',
              order: 9999,
            },
          },
        },
      };
      ",
      "title": "Storybook/Kind",
    },
  },
  "stories": Object {},
}
`;

exports[`csf-story-kind default export - with title and parameters 1`] = `
Object {
  "components": Object {},
  "kinds": Object {
    "Storybook/Blocks/ControlsTable": Object {
      "attributes": Object {
        "parameters": Object {
          "addonControls": Object {
            "smart": false,
          },
          "component": "ControlsTable",
        },
        "title": "Storybook/Blocks/ControlsTable",
      },
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/csf-story-kind.test.ts",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "source": "
        export default {
          title: 'Storybook/Blocks/ControlsTable',
          parameters: {
            component: ControlsTable,
            addonControls: {
              smart: false,
            }
          },
        };
      ",
      "title": "Storybook/Blocks/ControlsTable",
    },
  },
  "stories": Object {},
}
`;
